# fieldops-agent-fabric

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/eval/: golden_cases.jsonl
data/knowledge_base/: incident-escalation.md  refund-policy.md
docs/: DEPLOYMENT_URLS.md  DEPLOY_GCP.md
infra/terraform/: main.tf  variables.tf
mcp_servers/enterprise_mock/: server.py
src/fieldops/: __init__.py  config.py  llm.py
src/fieldops/agents/: __init__.py  adk_example.py  graph.py  state.py
src/fieldops/api/: main.py
src/fieldops/eval/: runner.py
src/fieldops/observability/: __init__.py  metrics.py  tracing.py
src/fieldops/rag/: __init__.py  ingest.py  retriever.py
src/fieldops/tools/: __init__.py  enterprise.py
tests/: test_workflow.py
