[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fieldops-agent-fabric"
version = "0.1.0"
description = "Enterprise agentic support fabric — FDE portfolio reference for GCP GenAI deployments"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Your Name" }]
keywords = ["gcp", "vertex-ai", "rag", "multi-agent", "mcp", "fde"]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0",
  "opentelemetry-api>=1.28.0",
  "opentelemetry-sdk>=1.28.0",
  "chromadb>=0.5.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
  "structlog>=24.4.0",
  "mcp>=1.0.0",
  "tenacity>=9.0.0",
]

[project.optional-dependencies]
gcp = [
  "google-adk>=1.25.0",
  "langchain-google-vertexai>=2.0.0",
  "google-cloud-aiplatform>=1.70.0",
  "google-cloud-logging>=3.11.0",
  "opentelemetry-exporter-gcp-trace>=1.7.0",
]
openai = ["langchain-openai>=0.2.0"]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.0",
  "mypy>=1.13.0",
]
[project.scripts]
fieldops-api = "fieldops.api.main:run"
fieldops-eval = "fieldops.eval.runner:main"
fieldops-ingest = "fieldops.rag.ingest:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
